// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow singleTags template escapes HTML special characters in template 1`] = `
Object {
  "attributes": Object {
    "data-is": "tag",
  },
  "childNodes": Array [
    Object {
      "childNodes": Array [
        Object {
          "nodeName": "#text",
          "nodeValue": "\\"&<>",
        },
      ],
      "tagName": "p",
    },
  ],
  "tagName": "tag",
}
`;

exports[`shallow singleTags template extracts template 1`] = `
Object {
  "attributes": Object {
    "data-is": "tag",
  },
  "childNodes": Array [
    Object {
      "childNodes": Array [
        Object {
          "nodeName": "#text",
          "nodeValue": "Hello, world!",
        },
      ],
      "tagName": "p",
    },
  ],
  "tagName": "tag",
}
`;

exports[`shallow singleTags template renders ignoring style 1`] = `
Object {
  "attributes": Object {
    "data-is": "static",
  },
  "childNodes": Array [
    Object {
      "childNodes": Array [
        Object {
          "nodeName": "#text",
          "nodeValue": "Hello, world!",
        },
      ],
      "tagName": "p",
    },
  ],
  "tagName": "static",
}
`;

exports[`shallow singleTags template renders static tag 1`] = `
Object {
  "attributes": Object {
    "data-is": "static",
  },
  "childNodes": Array [
    Object {
      "childNodes": Array [
        Object {
          "nodeName": "#text",
          "nodeValue": "Hello, world!",
        },
      ],
      "tagName": "p",
    },
  ],
  "tagName": "static",
}
`;

exports[`shallow singleTags template template "each" work 1`] = `
Object {
  "attributes": Object {
    "data-is": "tag",
  },
  "childNodes": Array [
    Object {
      "childNodes": Array [
        Object {
          "nodeName": "#text",
          "nodeValue": "A",
        },
      ],
      "tagName": "p",
    },
    Object {
      "childNodes": Array [
        Object {
          "nodeName": "#text",
          "nodeValue": "B",
        },
      ],
      "tagName": "p",
    },
    Object {
      "childNodes": Array [
        Object {
          "nodeName": "#text",
          "nodeValue": "C",
        },
      ],
      "tagName": "p",
    },
    Object {
      "nodeName": "#text",
    },
  ],
  "tagName": "tag",
}
`;
